--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web App measuring your somatotype and logging your RPE training scores"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
     <!--
