--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Web App measuring your somatotype and logging your RPE training scores"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
