--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
@@ -10,7 +10,12 @@
       content="Web App measuring your somatotype and logging your RPE training scores"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
-    <meta property="og:image" content="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
+    <meta property="og:title" content="Afitpilot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.afitpilot.com/" />
+    <meta property="og:image" content="https://www.afitpilot.com/Afitpilot_logo_outlined.svg" />
+    <meta property="og:description" content="Web App measuring your somatotype and logging your RPE training scores" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
