AF-44 tried replacing svg with png

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Afitpilot" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.afitpilot.com/" />
-    <meta property="og:image" content="https://www.afitpilot.com/Afitpilot_logo_outlined.svg" />
+    <meta property="og:image" content="https://www.afitpilot.com/Afitpilot_logo_outlined.png" />
     <meta property="og:description" content="Web App measuring your somatotype and logging your RPE training scores" />
     
     <!--
