--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,35 +2,32 @@
 <html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web App measuring your somatotype and logging your RPE training scores"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Afitpilot_logo_outlined.svg" />
-    <meta property="og:title" content="Afitpilot" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Afitpilot - Personalized Fitness Journey</title>
+    <meta name="description" content="Afitpilot offers a personalized fitness experience, tailored to your unique somatotype and fitness goals. Discover a custom approach to fitness with our somatotype assessment, customizable avatars, and intelligent training adaptations.">
+    <meta name="keywords" content="Afitpilot, personalized fitness, somatotype, RPE tracking, fitness avatar, custom workout, fitness journey">
+    <meta name="author" content="Afitpilot Team">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Afitpilot - Personalized Fitness Journey" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.afitpilot.com/" />
-    <meta property="og:image" content="https://www.afitpilot.com/Afitpilot_logo_outlined.png" />
-    <meta property="og:description" content="Web App measuring your somatotype and logging your RPE training scores" />
-    
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Afitpilot</title>
+    <meta property="og:image" content="https://www.afitpilot.com/icon/favicon.png" />
+    <meta property="og:description" content="Discover a personalized approach to fitness with Afitpilot. Tailor your workout and nutrition plan to your unique body type and fitness goals." />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.afitpilot.com/">
+    <meta property="twitter:title" content="Afitpilot - Personalized Fitness Journey">
+    <meta property="twitter:description" content="Unlock your fitness potential with Afitpilot. Personalized workouts and nutrition plans based on your unique somatotype.">
+    <meta property="twitter:image" content="https://www.afitpilot.com/icon/favicon.png">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="icon/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#000000">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
