AF-50 adding new logos with new sizes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,14 +11,14 @@
     <meta property="og:title" content="Afitpilot - Personalized Fitness Journey" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.afitpilot.com/" />
-    <meta property="og:image" content="https://www.afitpilot.com/icon/og-image.jpg" />
+    <meta property="og:image" content="https://www.afitpilot.com/icon/logo-og.png" />
     <meta property="og:description" content="Discover a personalized approach to fitness with Afitpilot. Tailor your workout and nutrition plan to your unique body type and fitness goals." />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.afitpilot.com/">
     <meta property="twitter:title" content="Afitpilot - Personalized Fitness Journey">
     <meta property="twitter:description" content="Unlock your fitness potential with Afitpilot. Personalized workouts and nutrition plans based on your unique somatotype.">
-    <meta property="twitter:image" content="https://www.afitpilot.com/icon/og-image.jpg">
+    <meta property="twitter:image" content="https://www.afitpilot.com/icon/logo-twitter.png">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="icon/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
